# mkdocs-macros-adr-summary

./: .adr-dir  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: github-pages-dev.yml  python-code-style.yml  python-typing.yml  release.yml  reusable-github-pages.yml
0.0/: 404.html
0.0/adr/0001-record-architecture-decisions/: index.html
0.0/adr/0002-supercedes-1/: index.html
0.0/adr/0003-supercedes-1-b/: index.html
0.0/search/: search_index.json
0.1/: 404.html
0.1/adr_madr2_example/0001-record-architecture-decisions/: index.html
0.1/adr_madr2_example/template/: index.html
0.1/adr_madr3_example/0001-record-architecture-decisions/: index.html
0.1/adr_madr3_example/summary/: index.html
0.1/adr_nygard_example/0001-record-architecture-decisions/: index.html
0.1/adr_nygard_example/0002-supercedes-1/: index.html
0.1/search/: search_index.json
1.0/: index.html
1.0/adr_madr2_example/summary/: index.html
1.0/adr_madr3_example/0002-change-mind/: index.html
1.0/adr_madr3_example/adr-template/: index.html
1.0/adr_nygard_example/summary/: index.html
1.0/search/: search_index.json
1.1/: 404.html  index.html
1.1/adr_madr2_example/0001-record-architecture-decisions/: index.html
1.1/adr_madr2_example/0002-changed-mind/: index.html
1.1/adr_madr2_example/summary/: index.html
1.1/adr_madr2_example/template/: index.html
1.1/adr_madr3_example/0001-record-architecture-decisions/: index.html
1.1/adr_madr3_example/0002-change-mind/: index.html
1.1/adr_madr3_example/summary/: index.html
1.1/adr_nygard_example/0002-supercedes-1/: index.html
1.1/adr_nygard_example/0003-supercedes-1-b/: index.html
1.1/adr_nygard_example/summary/: index.html
dev/: 404.html  index.html
dev/adr/summary/: index.html
dev/adr_madr2_example/0001-record-architecture-decisions/: index.html
dev/adr_madr2_example/0002-changed-idea/: index.html
dev/adr_madr2_example/0002-changed-mind/: index.html
dev/adr_madr2_example/summary/: index.html
dev/adr_madr2_example/template/: index.html
dev/adr_madr3_example/0001-record-architecture-decisions/: index.html
dev/adr_madr3_example/0002-change-idea/: index.html
dev/adr_madr3_example/0002-change-mind/: index.html
dev/adr_madr3_example/adr-template/: index.html
dev/adr_madr3_example/summary/: index.html
dev/adr_nygard_example/0001-record-architecture-decisions/: index.html
dev/adr_nygard_example/0002-supercedes-1/: index.html
dev/adr_nygard_example/0003-supercedes-1-b/: index.html
dev/adr_nygard_example/summary/: index.html
dev/search/: search_index.json
docs/: .pages  index.md
docs/adr/: 0001-record-architecture-decisions.md  0002-supercedes-1.md  0003-supercedes-1-b.md  0003-supersedes-1-b.md  summary.md
docs/adr_madr2_example/: 0001-record-architecture-decisions.md  0002-changed-idea.md  0002-changed-mind.md  summary.md  template.md
docs/adr_madr3_example/: 0001-record-architecture-decisions.md  0002-change-idea.md  0002-change-mind.md  summary.md
docs/adr_nygard_example/: .pages  0001-record-architecture-decisions.md  summary.md
mkdocs_macros_adr_summary/: __init__.py  factory.py  interfaces.py  parser.py  plugin.py  renderer.py  template.jinja
mkdocs_macros_adr_summary/parser/: __init__.py  base.py  exceptions.py  madr2.py  madr3.py  nygard.py  types.py
scripts/: docs-version.sh
tests/: conftest.py  test_bootstrap.py  test_factory.py  test_init.py  test_madr2_parser.py  test_madr3_parser.py  test_nygard_parser.py  test_parser.py  test_plugin.py  test_renderer.py
tests/adr_docs/madr2/: invalid_headers.md  invalid_no_content.md  invalid_title_h3.md  invalid_title_p.md  valid_with_metadata.md  valid_without_metadata.md
tests/adr_docs/madr3/: 0001-valid_with_metadata.md  invalid_headers.md  invalid_title_h3.md  invalid_title_p.md  valid_without_metadata_and_id.md
tests/adr_docs/nygard/: invalid_date_blank.md  invalid_date_format.md  invalid_date_h3.md  invalid_lines_delta.md  invalid_status_broken_file.md  invalid_status_h3.md  invalid_title_h3.md  invalid_title_p.md  valid.md  valid_multi_status.md
