[project]
name = "mkdocs-macros-adr-summary"
dynamic = ["version"]
description = "A plugin to generate a summary of a ADR directory"
authors = [{ name = "Federico Busetti", email = "729029+febus982@users.noreply.github.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "adr",
    "architecture-decision-records",
    "mkdocs",
    "mkdocs-plugin",
    "mkdocs-macro",
    "mkdocs-macro-plugin",
    "nygard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mistune>=3.0.2, <3.1",
    "mkdocs>=1.4.3,<2",
    "mkdocs-macros-plugin>=1.0.5,<2",
    "pyyaml>=6.0.1,<7",
]

[project.urls]
Homepage = "https://febus982.github.io/mkdocs-macros-adr-summary"
Repository = "https://github.com/febus982/mkdocs-macros-adr-summary"

[dependency-groups]
dev = [
    "coverage",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-material",
    "mike",
    "mypy",
    "pymdown-extensions",
    "pytest<8.4.0",
    "pytest-cov",
    "pytest-factoryboy",
    "pytest-xdist",
    "ruff",
    "types-pyyaml>=6.0.12.12,<7",
    "tox>=4.12.1",
    "tox-uv>=1.26.0",
    "uv-dynamic-versioning>=0.8.2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["mkdocs_macros_adr_summary"]

[tool.hatch.build.targets.wheel]
include = ["mkdocs_macros_adr_summary"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "mkdocs_macros_adr_summary/version.py"

[tool.coverage.run]
branch = true
source = ["mkdocs_macros_adr_summary"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "pragma: no cover",
    "pass",
    "\\.\\.\\.",
    ]
omit = [
    "mkdocs_macros_adr_summary/version.py",
]

[tool.mypy]
files = "mkdocs_macros_adr_summary"
python_version = "3.9"

[[tool.mypy.overrides]]
module = [
    "mkdocs_macros.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-n auto --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = ["docs", ".tox"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "RUF",  # ruff-specific-rules
]
# Ignoring rules problematic with formatter
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports on init files
"tests/**/*.py" = ["S101"]  # Allow assert usage on tests
